# finetype

./: .gitignore  README.md  generate_data.py
classifier/: Cargo.toml  README.md
classifier/src/data/: dataset.rs
labels/: README.md  build.sh  eda.sql  finetype_releases.yaml  generate_data.py  locales.yaml  overlap.csv  overlap.yaml
