[package]
name = "classifier"
version = "0.1.0"
edition = "2021"

[features]
default = ["burn/dataset", "burn/sqlite-bundled"]
f16 = []
ndarray = ["burn/ndarray"]
ndarray-blas-accelerate = ["burn/ndarray", "burn/accelerate"]
ndarray-blas-netlib = ["burn/ndarray", "burn/blas-netlib"]
ndarray-blas-openblas = ["burn/ndarray", "burn/openblas"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu"]
cuda-jit = ["burn/cuda-jit"]

[dependencies]
burn = { version = "0.14.0", features = ["train", "wgpu"] }

# Tokenizer
tokenizers = { version = "0.20.0", default-features = false, features = [
    "onig",
    "http",
] }

# Utils
derive-new = { version = "0.6.0", default-features = false }
serde = { version = "1.0.210", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed
